@@ -73,11 +73,11 @@
     var Logger    = require('../logger')(this);
     var Audit     = require('../audit')(this);
     var db        = require('../db')(this);
-    self.mailer   = require('../mailer')(this);
+    this.mailer   = require('../mailer')(this);
     //self.notify   = require('../notify')(this);
 
     // a copy of the logger object
-    this.logger = new Logger();
+    this.logger = new Logger({ loglevel: this.config.loglevel });
     this.audit  = new Audit();
     this.Schema = db.Schema;
 
