@@ -62,7 +62,6 @@ module.exports = function( caminio ){
    */
   _.merge( caminio.config, require( join(caminio.config.paths.config, 'environments', caminio.env) ) );
 
-
   // errors
   caminio.config.errors = {};
   var errorsPath = join(caminio.config.paths.config,'errors');
@@ -75,7 +74,8 @@ module.exports = function( caminio ){
       });
   }
 
-
+  // loggers
+  loadConfig('loggers', true);
 
   function loadConfig( str, skipError ){
     var adaptersPath = join( caminio.config.paths.config, str+'.js' );
@@ -93,4 +93,4 @@ module.exports = function( caminio ){
     throw Error( 'missing file '+pth );
   }
 
-}
+};
