@@ -20,7 +20,10 @@ module.exports = function( caminio ){
   /**
    * create a new logger instance
    */
-  function Logger(){
+  function Logger(options){
+
+    options = options || {};
+    options.loglevel = options.loglevel || 'debug';
 
     var config = {};
     config.colorize = config.colorize || true;
@@ -33,7 +36,8 @@ module.exports = function( caminio ){
       debug: 0
     };
 
-    config.level = config.level || this.levels.debug;
+    config.level = this.levels[options.loglevel];
+    console.log('\n\n and level is', config.level);
 
     var logger = this.logger = new winston.Logger();
 
@@ -46,7 +50,7 @@ module.exports = function( caminio ){
     if( caminio.env === 'development' )
       this.logger.add(
         winston.transports.Console, { 
-          level: caminio.config.logLevel || 'debug', 
+          level: options.loglevel || 'debug', 
           colorize: true
         });
     else{
@@ -54,13 +58,15 @@ module.exports = function( caminio ){
         mkdirp(dirname(caminio.config.log.filename));
       this.logger.add(
         winston.transports.File, { 
-          level: caminio.config.logLevel || 'info', 
+          level: options.loglevel || 'info', 
           colorize: false,
-          filename: caminio.config.log.filename
+          filename: caminio.config.log.filename,
+          handleExceptions: true
         });
     }
 
     var self = this;
+    this.info('caminio logger started with level', options.loglevel);
 
     /**
      * wrapper for the winston log method
@@ -69,23 +75,28 @@ module.exports = function( caminio ){
      */
     function log( level ){
       return function() {
-        //var str = [];
-        //for( var i in arguments ){
-        //  var arg = arguments[i];
-        //  if (typeof arg === 'object' && arg instanceof Error) {
-        //    if (arg instanceof Error)
-        //      str.push(arg.stack);
-        //    // else
-        //      // str.push(util.inspect(arg));
-        //  } else if( typeof(arg) === 'function' )
-        //    str.push(arg.valueOf());
-        //  else
-        //    str.push(arg);
-        //}
+        var str = [];
+        for( var i in arguments ){
+          var arg = arguments[i];
+          if (typeof arg === 'object' && arg instanceof Error) {
+            if (arg instanceof Error)
+              str.push(arg.stack);
+            else
+              str.push(util.inspect(arg));
+          } else if( typeof(arg) === 'function' )
+            str.push(arg.valueOf());
+          else
+            str.push(arg);
+        }
         if ( self.levels[level] >= config.level ) {
           var args = Array.prototype.slice.call(arguments);
           args.unshift(level);
           self.logger.log.apply(self.logger,args);
+
+          if( caminio.config.loggers || caminio.config.loggers instanceof Array )
+            caminio.config.loggers.forEach(function(addLogger){
+              addLogger.log(str.map(function(s){ return s ? s.toString() : ''; }).join(','));
+            });
         }
       };
     }
